@@ -25,7 +25,7 @@ public class ContainsAndRegexBasedSearchRuleDescriber implements SearchDescriber
     @Override
     public TextFlow getDescription() {
         List<String> words = new SentenceAnalyzer(query).getWords();
-        String firstWord = words.isEmpty() ? "" : words.get(0);
+        String firstWord = words.isEmpty() ? "" : words.getFirst();
 
         String temp = searchFlags.contains(SearchRules.SearchFlags.REGULAR_EXPRESSION) ? Localization.lang(
                 "This search contains entries in which any field contains the regular expression <b>%0</b>")
@@ -35,7 +35,7 @@ public class ContainsAndRegexBasedSearchRuleDescriber implements SearchDescriber
         if (words.size() > 1) {
             List<String> unprocessedWords = words.subList(1, words.size());
             for (String word : unprocessedWords) {
-                textList.add(TooltipTextUtil.createText(String.format(" %s ", Localization.lang("and")), TooltipTextUtil.TextType.NORMAL));
+                textList.add(TooltipTextUtil.createText(" %s ".formatted(Localization.lang("and")), TooltipTextUtil.TextType.NORMAL));
                 textList.add(TooltipTextUtil.createText(word, TooltipTextUtil.TextType.BOLD));
             }
         }
@@ -49,9 +49,9 @@ public class ContainsAndRegexBasedSearchRuleDescriber implements SearchDescriber
 
     private Text getCaseSensitiveDescription() {
         if (searchFlags.contains(SearchRules.SearchFlags.CASE_SENSITIVE)) {
-            return TooltipTextUtil.createText(String.format(" (%s). ", Localization.lang("case sensitive")), TooltipTextUtil.TextType.NORMAL);
+            return TooltipTextUtil.createText(" (%s). ".formatted(Localization.lang("case sensitive")), TooltipTextUtil.TextType.NORMAL);
         } else {
-            return TooltipTextUtil.createText(String.format(" (%s). ", Localization.lang("case insensitive")), TooltipTextUtil.TextType.NORMAL);
+            return TooltipTextUtil.createText(" (%s). ".formatted(Localization.lang("case insensitive")), TooltipTextUtil.TextType.NORMAL);
         }
     }
 }
